--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,6 +11,7 @@ h1 {
   margin: 1rem auto;
   background: -webkit-linear-gradient(45deg, #f9096d, #b700ff);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 3rem;
 }
