--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
-* {
-  box-sizing: border-box;
-}
-
 html {
-  height: 100%;
+  font-family: sans-serif;
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
-  background: radial-gradient(circle at top left, #181023, #0b0519);
-  color: #c3b3d8;
   margin: 0;
-  padding: 0;
-  height: 100%;
+  background-color: #1e1d20;
+  color: #ede8f7;
 }
