--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,10 @@
   </ul>
 
   @if(selectedUser) {
-  <app-tasks [selectedUserName]="selectedUser.name" />
+  <app-tasks
+    [userId]="selectedUser.id"
+    [selectedUserName]="selectedUser.name"
+  />
   } @else {
   <p id="fallback">Select a user to see their tasks!</p>
   }
