--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,8 +1,8 @@
 <article>
   <h2>{{ task.title }}</h2>
-  <time datetime="dd-mmm-yyyy">{{ task.dueDate }}</time>
+  <time>{{ task.dueDate }}</time>
   <p>{{ task.summary }}</p>
   <p class="actions">
-    <button>complete</button>
+    <button (click)="onCompleteTask()">Complete</button>
   </p>
 </article>
