--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 @if(isAddingTask) {
-<app-new-task />
+<app-new-task (add)="onAddTask($event)" (cancel)="onCancelAddTask()" />
 }
 
 <section id="tasks">
