--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -12,7 +12,7 @@
   <ul>
     @for(task of selectedUserTasks; track task.id) {
     <li>
-      <app-task (complete)="onCompleteTask($event)" [task]="task" />
+      <app-task [task]="task" />
     </li>
     }
   </ul>
